# Smart-Navigation-System-Documentation

./: .gitignore  GUIDE.md  README.md  cli_app  documention.md  main.py  pyproject.toml  requirements.txt  run.sh  streamlit_app.py
app/: main.py  streamlit_app.py
c/: Makefile  cli_app.c  cli_app.cpp  init.ps1
data/: dummy_edges.csv  dummy_nodes.csv  edges.csv  nodes.csv  query.csv
data/not-used/: dummy_edges.csv  dummy_query.csv  edges.csv
docs/: GUIDE.md
output/: history.csv  result.csv
smart_navigation/: __init__.py
smart_navigation/cli/: __init__.py  app.py
smart_navigation/core/: __init__.py  graph.py  history.py
smart_navigation/io/: __init__.py  csv_repository.py
smart_navigation/models/: __init__.py  query_result.py
smart_navigation/services/: __init__.py  navigation_service.py
tests/: test_core.py  test_ui_graph_builder.py
ui/: __init__.py  components.py  graph_builder.py
