[project]
name = "smart-navigation-system"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "streamlit-agraph>=0.0.45",
    "networkx>=3.0",
    "pandas>=2.0",
    "pyvis>=0.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["smart_navigation"]
